<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Balaji Paramedical Institute</string>
    <string name="api_key_youtube">AIzaSyAhXIN8F8pmLplTlUlys_9HkyRjsNFKrfY</string>
    <string name="api_key_youtube_one">AIzaSyAhXIN8F</string>
    <string name="api_key_youtube_two">8pmLplTlUlys_9</string>
    <string name="api_key_youtube_three">HkyRjsNFKrfY</string>
    <string name="organization_code">luotk</string>
    <string name="dropbox_app_key">n57js8zzalvthb0</string>
    <string name="branch_key">key_live_hn6zn9GPGDp7IdC5UcQe4aiiuzaZcR2G</string>
    <string name="whatsap_no_more">9256890104</string>
    <string name="call_no_more">9256890104</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign up</string>
    <string name="no_my_course">Looks like you have not enrolled for any\ncourse yet.</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="txt_new_signup">SIGNUP FOR A NEW ACCOUNT</string>
    <string name="name">Name</string>
    <string name="txt_already_have_account">I ALREADY HAVE AN ACCOUNT</string>
    <string name="like">Like course</string>
    <string name="unlike">Unlike course</string>
    <string name="send_otp_again">Send OTP again</string>
    <string name="home">Home</string>
    <string name="batches">Batches</string>
    <string name="your_batches">Your Batches</string>
    <string name="report">Reports</string>
    <string name="More">More</string>
    <string name="txt_about_us">About Us</string>
    <string name="txt_learn_about_us">Willing to learn more about us?</string>
    <string name="txt_visit_website">Visit Our Website</string>
    <string name="txt_visit_website_">Willing to learn more about us?</string>
    <string name="txt_not_added_to_batch">You are not added to any batch yet</string>
    <string name="txt_request_to_tutor">Request your tutor to add you to a batch</string>
    <string name="txt_send_join_request">Send Join Request</string>
    <string name="txt_share_app">Share the app with your friends</string>
    <string name="txt_tell_frnd">A friend in need is a friend indeed. Share the app with your friends</string>
    <string name="txt_share_now">Share Now</string>
    <string name="buy">BUY NOW</string>
    <string name="start_learning">START LEARNING</string>
    <string name="amount_paid">Amount paid</string>
    <string name="amount_payable">Amount payable</string>
    <string name="ask_teacher_for_code">Ask your teacher for the batch code, then enter it here</string>
    <string name="bestseller">Bestseller</string>
    <string name="startlearning">Start Learning</string>
    <string name="subject">Subject</string>
    <string name="course">Course</string>
    <string name="batch_code">Batch Code</string>
    <string name="timings">Timings</string>
    <string name="end">Ends</string>
    <string name="start">Starts</string>
    <string name="notes">Notes :</string>
    <string name="questions">Questions :</string>
    <string name="submitted">Submit Answer</string>
    <string name="test_attempted">Test Attempted</string>
    <string name="assign_submitted">Assignment Submitted</string>
    <string name="empty_test_attempted">You have not attempted any test!</string>
    <string name="empty_assign_submitted">You have not attempted any assignments yet!</string>
    <string name="download">Download</string>
    <string name="overall">Overall</string>
    <string name="my_profile">My Profile</string>
    <string name="contact_us">Contact us</string>
    <string name="time_table">Time Table</string>
    <string name="basic_info">Basic Information</string>
    <string name="parent_info">Parent Information</string>
    <string name="personal_info">Personal Information</string>
    <string name="address">Address</string>
    <string name="cancel">Cancel</string>
    <string name="select_date">Select Date</string>
    <string name="rate_us">Rate us</string>
    <string name="notification_setting">Notification Settings</string>
    <string name="go_to_setting">Settings</string>
    <string name="chat_with_us">Chat with us</string>
    <string name="connect_with_us">Connect</string>
    <string name="like_facebook">Like us on Facebook</string>
    <string name="follow_instagram">Follow us on Instagram</string>
    <string name="follow_twitter">Follow us on Twitter</string>
    <string name="follow_linked_in">Connect with us on LinkedIn</string>
    <string name="follow_youtube">Subscribe to our YouTube Channel</string>
    <string name="log_out">Logout</string>
    <string name="txt_welcome">Welcome to Smart Owls</string>
    <string name="txt_already_exist_number">Phone number already exist</string>
    <string name="login_with_this_no">Login with this number</string>
    <string name="txt_signup_with_new_no">Signup with new number</string>
    <string name="join">Join</string>
    <string name="enter_demo_batch_code">Enter \"xyz\" as a demo batch code</string>
    <string name="tap_plus_icon_student">Click \"Add\" button to add students</string>
    <string name="tap_plus_icon_assignment">Click \"Add\" button to create assignment</string>
    <string name="tap_study_material">Click on the \"Add\" button to upload content</string>
    <string name="tap_plus_icon">Tap the add button  to continue</string>
    <string name="no_any_transcation">You don\'t have any transcations</string>
    <string name="Announcements">Announcements</string>
    <string name="sub_title_help_feedback">Chat with us if you need any assistance and give feedback by rating us.</string>
    <string name="sub_title_contact_us">Follow us on various social platform and be part of our learning community</string>
    <string name="account_access">Account access</string>
    <string name="txt_internet_disconnected">Your device seems to be offline.</string>
    <string name="txt_check_internet">Please check your internet connection</string>
    <string name="live_end_msg">Thank you for attending live class. Hope! you enjoyed the session.</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="no_result_found">No Matches</string>
    <string name="best_app_txt">The Best Learning App</string>
    <string name="txt_unauthorized_msg_1">Your phone number is no longer registered on this phone.</string>
    <string name="txt_unauthorized_msg_2">This is because you registered it on another phone.</string>
    <string name="enter_org_code_continue">Enter Org Code to continue</string>
    <string name="verify">Verify</string>
    <string name="change_org">Change Org</string>
    <string name="successfully_added_to_batch">You are successfully added to batch(es)</string>
    <string name="add_to_another_batch">Request your tutor to add you to another batch</string>
    <string name="txt_not_created_batch">You have not created any batch</string>
    <string name="txt_create_batch_from_portal">Create a batch from Admin portal</string>
    <string name="store">Store</string>
    <string name="open">Open</string>
    <string name="buy_now">Buy Now</string>
    <string name="course_detail">Course Details</string>
    <string name="join_for_free">Join for free</string>
    <string name="payments">Payments</string>
    <string name="enquiry">Enquiry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quick_actions">Quick actions</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="help_support_desc">We are here to help you. Let us know if you any quiries/suggestion regarding your app.</string>
    <string name="text_share_app">Share the app</string>
    <string name="share_app_desc">The more you share the more you earn</string>
    <string name="share_code">You can share this code with students to join this batch</string>
    <string name="contact_number">9814698149</string>
    <string name="tap_the_button_to_send_your_first_nannouncement_to_the_entire_batch">Add an announcement for all students in this batch.</string>
    <string-array name="blood_groups">
        <item>Select blood group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string name="gender">Gender</string>
    <string name="title_activity_new_custom_player">NewCustomPlayerActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="invalid_org_code">Invalid Org Code</string>
    <string name="please_enter_org_code">Please enter org code</string>
    <string name="org_code">Org Code</string>
    <string name="hindi">हिन्दी</string>
    <string name="ok">Ok</string>
    <string name="disconnect_usb">Disconnect USB</string>
    <string name="your_device_is_connected_to_pc_please_disconnect_the_usb_data_connection_to_play_the_videos">Your device is connected to PC. Please disconnect the USB data connection to play the videos</string>
    <string name="ok_got_it">OK,GOT IT</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="document">Document</string>
    <string name="add_new_folder">Add new folder</string>
    <string name="add_ext_link">Add external link</string>
    <string name="start_test">Start Test</string>
    <string name="gen_instructions">General Instructions</string>
    <string name="first_instruction">1. This is a timed test; the running time is displayed on the top left corner of the screen.</string>
    <string name="second_instruction">2. The question screen displays the question number along with the question and respective options.</string>
    <string name="third_instruction">3. The top right of section above the question has an option to mark the question for review. You can later view the marked question.</string>
    <string name="fourth_instruction">4. You can mark or unmark any option you have chosen by tapping on the respective option.</string>
    <string name="fifth_instruction">5. The bottom left corner contains the option to move to the previous question.</string>
    <string name="sixth_instruction">6. The bottom right corner contains the option to move to the next question.</string>
    <string name="seven_instruction">7. You can jump between sections by choosing the section on the top right corner of the screen.</string>
    <string name="eight_instruction">8. You can submit the test at any point of time by clicking the Submit button on top right corner of the screen.</string>
    <string name="nine_instruction">9. Before submission, the screen shows a confirmation pop-up with the total number of questions in the test, questions answered and questions marked for review.</string>
    <string name="ten_instruction">10.Test must be completed in one attempt. Test once submitted cannot be re-attempted or started again.</string>
    <string name="elevent_instruction">11. You should not change or close the test screen while attempting test.</string>
    <string name="tweleve_instruction">12. If the app is closed or screen is changed by any means, the test will be submitted automatically.</string>
    <string name="thirteen_instruction">13. After completion of test, a test summary screen will be displayed in report section with test details &amp; solutions.</string>
    <string name="fourteen_instruction">14. If something goes wrong, contact your tutor and communicate the problem.</string>
    <string name="run_out_of_time">Oops! You\'ve run out \nof time!</string>
    <string name="test_submitted">Your test has been submitted</string>
    <string name="courses">Courses</string>
    <string name="image">Image</string>
</resources>