<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_7sdp"
    android:orientation="vertical"

    android:padding="@dimen/_7sdp">

    <com.so.luotk.customviews.CustomSemiBoldFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_7sdp"
        android:gravity="center"
        android:textSize="@dimen/_12sdp"
        android:text="@string/txt_unauthorized_msg_1"
        android:textColor="@color/black" />

    <com.so.luotk.customviews.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:textSize="@dimen/_12sdp"
        android:text="@string/txt_unauthorized_msg_2" />

    <com.so.luotk.customviews.CustomFontTextView
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edge"
        android:gravity="center_horizontal"
        android:padding="@dimen/_7sdp"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/_12sdp" />

</LinearLayout>
