<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.so.luotk.customviews.CustomFontTextView
        android:id="@+id/tv_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_12sdp"
        android:text="@string/call"
        android:textColor="@color/blue_main"
        android:textSize="@dimen/_14sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <com.so.luotk.customviews.CustomFontTextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_12sdp"
        android:text="@string/message"
        android:textColor="@color/blue_main"
        android:textSize="@dimen/_14sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <com.so.luotk.customviews.CustomFontTextView
        android:id="@+id/tv_whatsapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_12sdp"
        android:text="@string/whatsapp"
        android:textColor="@color/blue_main"
        android:textSize="@dimen/_14sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

</LinearLayout>